map bugs is fexed now

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZGl2aW5lLXdvb2Rjb2NrLTc4LmNsZXJrLmFjY2
 DATABASE_URL=postgresql://Uber_owner:npg_wH6roJ8XSjNC@ep-shrill-king-a5sss2of-pooler.us-east-2.aws.neon.tech/Uber?sslmode=require
 EXPO_PUBLIC_SERVER_URL=https://uber.com/
 EXPO_PUBLIC_GEOAPIFY_API_KEY=c9bd08ecc3004570a777d83a45cf9b5d
+EXPO_PUBLIC_GOOGLE_API_KEY=AIzaSyDgtzGr8Am1qZ40GnvMAxjvH2--TOT_oXo
