--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DATABASE_URL=postgresql://Uber_owner:npg_wH6roJ8XSjNC@ep-shrill-king-a5sss2of-po
 EXPO_PUBLIC_SERVER_URL=https://uber.com/
 EXPO_PUBLIC_GEOAPIFY_API_KEY=c9bd08ecc3004570a777d83a45cf9b5d
 EXPO_PUBLIC_GOOGLE_API_KEY=AIzaSyDgtzGr8Am1qZ40GnvMAxjvH2--TOT_oXo
+EXPO_PUBLIC_GOMAP_API_KEY=AlzaSy0XeUYlt6j9ihKDCdn_wbnnLcX9bAIZtAA
